# SentinelRAG

./: .gitignore  LICENSE  README.md  SentinelRAG_Master_Implementation_Plan.md  pyproject.toml
src/sentinelrag/: __init__.py  api.py  cli.py  config.py  embedding.py  hardware.py  hardware_profiler.py  ingest.py  llm.py  paths.py  pcscan.py  rag.py  resource_arbiter.py  storage.py  types.py
src/sentinelrag/agents/: evidence_merger.py  nodes.py  workflow.py
src/sentinelrag/graph/: __init__.py  entity_graph.py  graph_store.py  link_resolver.py  ranking.py  traversal.py
src/sentinelrag/obsidian/: __init__.py  parser.py  watcher.py
src/sentinelrag/retrieval/: __init__.py  query_classifier.py
src/sentinelrag/storage/: vector_store.py
storage_vault/: NoteA.md  NoteB.md  ReferenceNote.md
tests/: test_block_identity_stability.py  test_evidence_merger.py  test_hardware_tier_agent_graph.py  test_hybrid_ranking.py  test_link_disambiguation.py  test_parser_consistency.py  test_query_classifier.py  test_resource_arbiter.py  test_stress.py  test_watcher_debounce.py  test_watcher_rename_integrity.py
