[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelrag"
version = "0.1.0"
description = "Local-first RAG CLI for searching and asking questions over local files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
edge = [
  "qdrant-edge-py",
  "falkordblite",
  "nvidia-ml-py",
]
pdf = [
  "pypdf",
]
dev = [
  "pytest",
]

[project.scripts]
sentinelrag = "sentinelrag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
