[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelrag"
version = "0.1.0"
description = "Local-first RAG CLI for searching and asking questions over local files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph",
  "qdrant-client",
  "markdown-it-py",
  "watchdog",
]

[project.optional-dependencies]
edge = [
  "nvidia-ml-py",
]
pdf = [
  "pypdf",
]
dev = [
  "pytest",
]

[project.scripts]
sentinelrag = "sentinelrag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
